2019-07-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (ptToDouble): Another debug message

2019-07-05  Dirk Eddelbuettel  <edd@debian.org>

        * .travis.yml (install): Use r-cran-tinytest from PPA

2019-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-06-26  Christoph Sax  <christoph.sax@gmail.com>

	* src/anytime.cpp: Correct use via Rcpp::Function imported
	Sys.setenv on Windows
	* R/anytime.R: Use all argument to anytime_cpp()

	* inst/tinytest/test_gh_issue_56.R: Relax Windows test constraint
	* inst/tinytest/test_gh_issue_84.R: Idem
	* inst/tinytest/test_simple.R: Idem
	* inst/tinytest/test_utilities.R: Idem
	
2019-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_all_formats.R: Add three tests to complete
	coverage

	* src/anytime.cpp (convertToTime): Some #nocov attributes

2019-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.4

2019-06-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_all_formats.R: Do not run test for releases
	* inst/tinytest/test_bulk.R: Idem
        * inst/tinytest/test_gh_issue_5.R: Idem
        * inst/tinytest/test_validate.R: Idem

2019-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/anytime-introduction.Rnw: Vignette wrapper with tip of
	the hat to Mark van der Loo for his January 2019 blog post
	* vignettes/rmd/anytime-intro.Rmd: Moved
	* vignettes/rmd/anytime.bib: Idem

	* vignettes/rmd/anytime-intro.Rmd: Updated
	* vignettes/anytime-intro.pdf: Idem

	* vignettes/anytime-intro.pdf: Ran compactPDF(gs_quality = "ebook")

	* .codecov.yml (coverage): Make patch behaviour more quiet

	* inst/tinytest/test_simple.R: Test old format

2019-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* R/formats.R (iso8601): Switch format to ISO8601 use with T between
	date and time; allow option to override for old behaviour.