@@ -9,7 +9,7 @@ if (requireNamespace("tinytest", quietly=TRUE)) {
     ## run once the package is installed using the same command
 
     ## we need version 0.9.4 or later
-    if (packageVersion("tinytest") >= "0.9.4") {
+    if (utils::packageVersion("tinytest") >= "0.9.4") {
         tinytest::test_package("anytime")
     }
 }
